Enable interface augmentation for feature methods